--- a/FinanceTrackerApp/Components/App.razor
+++ b/FinanceTrackerApp/Components/App.razor
@@ -15,9 +15,8 @@
 </head>
 
 <body>
-    <Routes />
-    <ReconnectModal />
-    <script src="@Assets["_framework/blazor.web.js"]"></script>
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
