--- a/FinanceTrackerApp/Components/_Imports.razor
+++ b/FinanceTrackerApp/Components/_Imports.razor
@@ -6,7 +6,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
+@using ApexCharts
 @using FinanceTrackerApp
 @using FinanceTrackerApp.Components
 @using FinanceTrackerApp.Components.Layout
